<resources>
    <string name="app_name">Explore</string>
    <string name="facebook_app_id">175963093747235</string>
    <string name="fb_login_protocol_scheme">fb175963093747235</string>
    <string name="firebase_client_id">1093689593287-fvf61gg16jcqu68kvvt5va504lcmgq4q.apps.googleusercontent.com</string>
    <string name="pagoda_en">Pagodas</string>
    <string name="pagoda_mm_unicode">ဘုရား</string>
    <string name="pagoda_mm_zawgyi">ဘုရား</string>
    <string name="views_en">Views</string>
    <string name="views_mm_zawgyi">ျမင္ကြင္းလွမ်ား</string>
    <string name="views_mm_unicode">မြင်ကွင်းလှများ</string>
    <string name="ancients_en">Ancients</string>
    <string name="ancients_mm_zawgyi">ေရွးေဟာင္းေနရာမ်ား</string>
    <string name="ancients_mm_unicode">ရှေးဟောင်းနေရာများ</string>
    <string name="foods_en">Foods &amp; Drinks</string>
    <string name="foods_mm_zawgyi">အစားအေသာက္</string>
    <string name="foods_mm_unicode">အစားအသောက်</string>
    <string name="accessories_en">Accessories</string>
    <string name="accessories_mm_zawgyi">ဝယ္စရာ</string>
    <string name="accessories_mm_unicode">ဝယ်စရာ</string>
    <string name="supports_en">Supports</string>
    <string name="supports_mm_zawgyi">အကူအညီ</string>
    <string name="supports_mm_unicode">အကူအညီ</string>
    <string name="created_date_en">Created Date</string>
    <string name="created_date_mm_zawgyi">တည္ေထာင္သည့္ ခုႏွစ္</string>
    <string name="created_date_mm_unicode">တည်ထောင်သည့် ခုနှစ်</string>
    <string name="festival_date_en">Festival Date</string>
    <string name="festival_date_mm_zawgyi">ပြဲေတာ္ေန႕</string>
    <string name="festival_date_mm_unicode">ပွဲတော်နေ့</string>
    <string name="name_en">Name</string>
    <string name="name_mm_unicode">နာမည်</string>
    <string name="name_mm_zawgyi">နာမည္</string>
    <string name="choose_type_en">Choose Type</string>
    <string name="choose_type_mm_unicode">အမျိုးအစား ရွေးချယ်ပါ</string>
    <string name="choose_type_mm_zawgyi">အမ်ိဳးအစား ေရြးခ်ယ္ပါ</string>
    <string name="about_en">About</string>
    <string name="about_mm_unicode">အကြောင်းအရာ</string>
    <string name="about_mm_zawgyi">အေၾကာင္းအရာ</string>
    <string name="add_en">Add</string>
    <string name="add_mm_unicode">ပေါင်းထည့်မယ်</string>
    <string name="add_mm_zawgyi">ေပါင္းထည့္မယ္</string>
    <string name="update_en">Update</string>
    <string name="update_mm_unicode">ပြုပြင်မယ်</string>
    <string name="update_mm_zawgyi">ျပဳျပင္မယ္</string>
    <string name="btn_facebook_en">Continue with facebook</string>
    <string name="btn_facebook_mm_unicode">ဖေ့ဘုတ်ဖြင့် ဝင်မည်</string>
    <string name="btn_facebook_mm_zawgyi">ေဖ့ဘုတ္ျဖင့္ ဝင္မည္</string>
    <string name="btn_google_en">Sign in with Google</string>
    <string name="btn_google_mm_unicode">ဂူဂယ်ဖြင့် ဝင်မည်</string>
    <string name="btn_google_mm_zawgyi">ဂူဂယ္ျဖင့္ ဝင္မည္</string>
    <string name="uploader_en">Uploader - </string>
    <string name="uploader_mm_unicode">မူရင်းတင်သူ - </string>
    <string name="uploader_mm_zawgyi">မူရင္းတင္သူ - </string>
    <string name="details_en">Details</string>
    <string name="details_mm_unicode">အသေးစိတ်</string>
    <string name="details_mm_zawgyi">အေသးစိတ္</string>
    <string name="related_views_en">Related Views</string>
    <string name="related_views_mm_unicode">ဆက်နွယ်သော ပုံရိပ်များ</string>
    <string name="related_views_mm_zawgyi">ဆက္ႏြယ္ေသာ ပံုရိပ္မ်ား</string>
    <string name="continue_en">Continue</string>
    <string name="continue_mm_unicode">ဆက်သွားမယ်</string>
    <string name="continue_mm_zawgyi">ဆက္သြားမယ္</string>
    <string name="welcome_text_en">Welcome to Shwebo</string>
    <string name="welcome_text_mm_unicode">ရွှေဘိုမှ ကြိုဆိုပါတယ်။</string>
    <string name="welcome_text_mm_zawgyi">ေရႊဘုိမွ ၾကိဳဆုိပါတယ္။</string>
    <string name="got_it_en">Got it</string>
    <string name="got_it_mm_unicode">ရပြီ</string>
    <string name="got_it_mm_zawgyi">ရျပီ</string>
    <string name="dont_show_en">Do not show this again</string>
    <string name="dont_show_mm_unicode">ဒါကြီး ထပ်မကြည့်ချင်ဘူး</string>
    <string name="dont_show_mm_zawgyi">ဒါၾကီး ထပ္မၾကည့္ခ်င္ဘူး</string>
    <string name="en">en</string>
    <string name="mm">mm</string>
    <string name="pagoda">Pagoda</string>
    <string name="view">View</string>
    <string name="ancient">Ancient</string>
    <string name="accessory">Accessory</string>
    <string name="support">Support</string>
    <string name="watch_videos">Watch videos</string>
    <string name="view_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="intro_title_en">The City of Shwebo</string>
    <string name="intro_title_mm_unicode">ပြည်ရွှေဘို</string>
    <string name="intro_title_mm_zawgyi">ျပည္ေရႊဘုိ</string>
    <string name="menu_edit_en">Edit</string>
    <string name="menu_edit_mm_unicode">ပြုပြင်မယ်</string>
    <string name="menu_edit_mm_zawgyi">ျပဳျပင္မယ္</string>
    <string name="menu_delete_en">Delete</string>
    <string name="menu_delete_mm_unicode">ဖျက်မယ်</string>
    <string name="menu_delete_mm_zawgyi">ဖ်က္မယ္</string>
    <string name="intro_body_en">

* Five names has the City of Shwebo: \n
To start with Yangyi-aung and Konbaung,\n
Magnificent is its Royal Palace. Glittering with four colours\n
Mokesopo and Yadanatheingha!\n
From that land of Alaungphaya enemies were annihilated.\n
\n
 * Unshakeable is the glory \n
Of the City of Mokesopo.\n
It eliminates all dangers.\n
\n
 * Relying on the king the military chief\n
Cleared away enemies in their entirety\n
Truly beautiful is Shwebo\n
That Land of Victory.\n
\n
 * The name of Shwebo \n
Will not disappear \n
From the annals of history.\n
Listen to the tale of our ancestors:\n
It is said that a snake\n
Was chasing a frog so as to eat it up.\n
But when they reached the land of Shwebo,\n
The frog made itself ready to bite the snake,\n
And subsequently the snake creeped away.\n
That was a precedent.\n
[ an old Myanma long drum song ]\n
translated by - \n
The Most Rev. Friedrich V. Lustig, Buddhist Arch.\n
bishop of Latvia (extracted from: "Burmese Poems Through the Ages")\n</string>
    <string name="intro_body_mm_unicode">
 * ရန်ကြီးအောင် ကုန်းဘောင်သ \n
ငါးမည်ရ ပြည်ရွှေဘို။ \n
လေးရောင်ရှိန် ဣန္ဒာနန်းမှာ \n
ဆန်းသာနုပျိုလေ့။ \n
မုဆိုးဖို \n
ရန်ပြိုတဲ့ နာသိင်္ယမှာ ၊ ဘေးတော့် ဒေသ။ \n
\n
 * မတိမ်နိုင် ဂုဏ်တန်ခိုးနဲ့ \n
မုဆိုးဖို ပြည်နဂိုရ်၊ ဘေးရန်ညွန့်ပြိုလေ့။ \n
\n
 * ဗိုလ်ပေါင်းရယ်ခို၊ ရန်ပေါင်းကို နှိမ်ဖြိုတဲ့ \n
ပြည်ရွှေဘိုအောင်မြေရမို့ \n
သာလှသလေး။	။ \n
\n
 * ရွှေဘိုဆို မတိမ်ထွန်းသကွဲ့ \n
မော်ကွန်းရ ဥဒါန်းဝင် \n
ရှေးစဉ်လာဆိုစကား၊ နားစေ့စေ့တင်လေ့။ \n
\n
 * မြွေကပင် စားချင်ငြားလို့ \n
ဖားသို့လိုက်ရာ \n
ရွှေဘိုမြေတစ်ဖန်ဆိုက်ပြန်တော့ \n
ဖားကပင် မြွေကိုကိုက်မယ်တဲ့ \n
လိုက်ငြားလျှင် လည်လို့ပြေးရတယ် \n
ထုံးပုံကရှိသေး။	။ \n
\n
(ရှေးခေတ်ဗုံကြီးသံ သီချင်း)\n\n
     * ရွှေဘိုမြို့က စစ်ကိုင်းတိုင်း ဒေသကြီးထဲမှာ တည်ရှိပြီးတော့ မန္တလေးကနေ အနောက်မြောက်ဘက် ၁၁၀ ကီလိုမီတာ တွင် တည်ရှိပါတယ်။\n
 * ဦးအောင်ဇေယျ ခေါ် အလောင်းမင်းတရားကြီးက အင်္ဂလိပ် သက္ကရစ် (1752) မှာ ရွှေဘိုမြို့ကို
အခြေပြုပြီး ကုန်းဘောင်မင်းဆက်ကို တည်ထောင်ခဲ့တယ်။ \n
 * " ရန်ကြီးအောင် ကုန်းဘောင်ခပါလို့ ငါးမည်ရ ပြည်ရွှေဘို " ဟု အဆိုအတိုင်း ရွှေဘိုမြို့က အမည် ၅မျိုး ရှိပါတယ်။ \n
အဲ့ဒီအမည်(၅)မျိုးကတော့ (၁) မုဆိုးဖို ၊ (၂) ရတနာသိင်္ဃ ၊ (၃) ကုန်းဘောင် ၊ (၄) ရန်ကြီးအောင် ၊ (၅) ရွှေဘို ဆိုပြီး ဖြစ်ပါတယ်။\n
 မြန်မာနိုင်ငံက ကုန်းအခြေပြုလက်နက်နိုင်ငံ ဖြစ်လို့ ရှေးခေတ်က ဘုရင်တွေက နေပြည်တော်ကို ကုန်းတွင်းဘက်မှာ တည်ဆောက်တာများတယ်။
ဒါကြောင့်မို့ ဆက်သွယ်ရေး လွယ်ကူစေရန် ဧရာဝတီ မြစ်ကမ်းတစ်လျှောက်မှာ တည်ဆောက်ကြတယ်။ ဒါပေမယ့်
 အလောင်းမင်းတရားကြီးက ဇာတိမြေကို မစွန့်လွှတ်နိုင်လို့ ရွှေဘိုမှာပဲ မြို့တော် တည်ထောင်ခဲ့တယ်။ ဒါကြောင့် ရွှေဘိုမြို့က
ဧရာဝတီမြစ်ကနေ (၁၇)မိုင် ၊ အနောက်ဘက် မူးမြစ်ကနေ
(၁၀)မိုင်အကွာမှာ တည်ရှိတယ်။ အလောင်းမင်းတရားကြီး နတ်ရွာစံတော့ သားတော်ကြီးဖြစ်တဲ့ နောင်တော်ကြီးမင်း နန်းတက်တဲ့အချိန် မြို့တော်ကို ဧရာဝတီမြစ်ကမ်းဘက်ကို ရွှေ့ဖို့ ကြံစည်ခဲ့တယ်လို့ အဆိုရှိခဲ့တယ်။ ဒါပေမယ့် မင်းဆရာ အတုလဆရာတော်က
ကန့်ကွက်ခဲ့တယ်။ အကြောင်းရင်းကတော့ အလောင်းမင်းတရားကြီးရဲ့ အယူအဆက တောရိပ်တောင်ရိပ် မြစ်ဆိပ်တို့မှာ ခိုလှုံတာထက်
ဘုန်းတန်ခိုးမှာ ခိုလှုံတာ ပဓာန ဖြစ်တယ်လို့ ယုံကြည်ခဲ့လို့ဖြစ်တယ်။ ဆိုလိုချင်တာက ဒီအရပ်သည် ရန်အပေါင်းကို အောင်မြင်ခဲ့
တဲ့ အောင်မြေအစစ်ဖြစ်လို့ မြို့တော်တည်ခဲ့ရခြင်းလဲ ဖြစ်တယ်။ \n
 * မြို့တော် တည်ထောင်ခဲ့တဲ့ ခုနှစ်ကတော့ မြန်မာသက္ကရစ် (၁၁၁၅) ခုနှစ် ဖြစ်ပါတယ်။ \n
 * မြို့တည်တဲ့ အချိန် (၁) မြို့တော် ၊ (၂) ကျုံး ၊ (၃) နန်းတော် ၊ (၄) ရွှေချက်သိုစေတီတော် ၊ (၅) ပဟိုရ်စင် ၊ (၆)
နတ်ကွန်းတော် ၊ (၇) ကန်တော် တို့မှာ တစ်ချိန်တည်း ပန္နက်ချပြီး တည်ဆောက်စေခဲ့တယ်။ \n
 * မြို့ရဲ့ ထူးခြားချက်က မြို့ ပတ်ပတ်လည်ကို ကျုံးဖြင့် ဝန်းရံထားခြင်းဖြစ်တယ်။ (Google map မှာ ရှာကြည့်နိုင်ပါတယ်။)
 ( အခု အထင်ကရနေရာတွေ အကြောင်းကို နောက်ထပ် ဖော်ပြမယ့် ရှေးဟောင်း/ရှေးကျသော နေရာများနဲ့ ဘုရားများမှာ ကြည့်ရှုနိုင်ပါတယ်။ )  \n
 * ရွှေဘိုမြို့ရဲ့ အဓိက ထွက်ကုန်တွေကတော့ ဆန်စပါး၊ပဲ၊နှမ်း တို့ ဖြစ်ကြပြီး မူးမြစ်နဲ့ ဧရာဝတီမြစ်ကမ်းတစ်လျှောက်မှာ စိုက်ပျိုးကြတာ
ဖြစ်ပါတယ်။ \n
 * ဆက်သွယ်ရေးအနေနဲ့ကတော့ မန္တလေး၊မြစ်ကြီးနား ရထားလမ်းဖောက်လုပ်ထားပြီး Express ကားကြီးများလဲ ရန်ကုန်၊မုံရွာ၊မန္တလေး အစရှိတဲ့
မြို့ကြီးများသို့ ပြေးဆွဲနေပြီဖြစ်ပါတယ်။\n
 * အထင်ကရနေရာများကတော့ (၁) ရွှေချက်သို စေတီတော် လို့ အမည်ရတဲ့ အလောင်းဘုရား မွေးဖွားချက်မြုပ်ရာ ၊
(၂) မဟာနန္ဒာကန်တော် ၊ (၃) ဗဟိုရ်စည်တော် ၊ (၄) ဘုရင့်နန်းတော် ၊ (၅) မဟာအောင်မြေ ၊ (၆) မြို့ထောင်စေတီတော် ၊
(၇) အလောင်းမင်းတရား အုတ်နန်းပြာသာဒ်တော် ၊ (၈) ရွှေတံဆာ ဘုရား ၊ (၉) ကိုးမြို့ရှင် နတ်ကွန်း (နတ်ကြီးကိုးပါး) တို့ပဲ ဖြစ်ပါတယ်။\n\n

Ref - ရွှေဘိုနိဒါန်း နှင့် Wikipedia ။
</string>
</resources>