<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            >

            <TextView
                android:id="@+id/tv_intro_title"
                android:text="@string/intro_title_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white_full"
                android:textStyle="bold"/>

            <View
                android:id="@+id/view"
                android:layout_below="@id/tv_intro_title"
                android:background="@color/white_full"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:id="@+id/tv_intro_body"
                android:layout_below="@id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="110dp"
                android:text="@string/intro_body_en"
                android:textAlignment="center"
                android:textColor="@color/white_full"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </ScrollView>
    <RadioGroup
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:checkedButton="@+id/toggle_eng"
        android:id="@+id/toggle_language"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/control_switch_background_border"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/toggle_eng"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:background="@drawable/control_switch_background_selector_middle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:button="@null"
            android:gravity="center"
            android:text="en"
            android:fontFamily="sans-serif-medium"
            android:textColor="@drawable/control_switch_color_selector"/>
        <RadioButton
            android:id="@+id/toggle_mm"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/control_switch_background_selector_middle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="mm"
            android:fontFamily="sans-serif-medium"
            android:textColor="@drawable/control_switch_color_selector"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#80001700">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_dont_show"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:buttonTint="@color/white_full" />

        <TextView
            android:id="@+id/tv_dont_show"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/cb_dont_show"
            android:gravity="center"
            android:text="@string/dont_show_en"
            android:textColor="@color/white_full" />

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/continue_en"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
